--- a/.project
+++ b/.project
@@ -34,4 +34,11 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>resources</name>
+			<type>2</type>
+			<location>C:/Users/hai.b.nguyen/Downloads/STS_WORKSPACE/MyEventFrontEnd/src/main/resources</location>
+		</link>
+	</linkedResources>
 </projectDescription>
